welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:3: error: ';' expected but '(' found.
	var n: Int (!==0);
                   ^